package com.company;

public interface FileIO {

    String inputData();
    String readResult();
    String readData();
    String SavaData();



}
