package com.company;

public class Main {



    public static void main(String[] args)
    {
        //TournamentSystem.runTournament();
        TournamentSystem tournamentSystem = new TournamentSystem();
        tournamentSystem.runTournament();

    }

}
