package com.company;

public class Match
{
    private int matchGoalScores;
    private String nameOfTeam;
    private String[] nameOfPlayer;

    public Match(int matchGoalScores)
    {
        this.matchGoalScores = matchGoalScores;

    }

    public String addTeam()
    {
        return null;
    }
    public int scheduleMatch()
    {
        return 0;
    }
    public void recordMatchResult()
    {

    }
}
