package com.company;

public class Registration {
    String nameOfTeam;
    String [] nameOfPlayers;

    public void recieveRegistraions() {


    }
}
