package com.company;

import java.util.ArrayList;

public class TournamentSystem
{
    private FileIO fileIO= new FileIO();

    public TournamentSystem()
    {
        runTournament();
    }



    private void runTournament()
    {
        ArrayList<String> data;
        data =  fileIO.inputData();
        if(data == null){

            data = TextUI.getPlayerNames("Skriv spillernavn. Tast Q for at quitte");
        }
        this.(data);
        String[] tournamentData = fileIO.readTournamentData();

    }

}